--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   flutter:
     sdk: flutter
   mockito: ^5.0.8
+  sqflite: ^2.0.0+3
 
 
   # The following adds the Cupertino Icons font to your application.
