--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
   uuid: ^3.0.4
   path: ^1.8.0
   provider: ^5.0.0
+  path_provider: ^2.0.2
 
 
   # The following adds the Cupertino Icons font to your application.
