--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   path: ^1.8.0
   provider: ^5.0.0
   path_provider: ^2.0.2
+  camera: ^0.8.1+3
 
 
   # The following adds the Cupertino Icons font to your application.
