--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,9 @@ dependencies:
   provider: ^5.0.0
   path_provider: ^2.0.2
   camera: ^0.8.1+3
+  shamsi_date: ^0.15.0
+  moor_flutter: ^4.0.0
+  sqlite3_flutter_libs: ^0.5.0
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -39,6 +42,8 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  moor_generator: ^4.3.1
+  build_runner: ^2.0.4
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
