--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,11 @@ dependencies:
   shamsi_date: ^0.15.0
   moor_flutter: ^4.0.0
   sqlite3_flutter_libs: ^0.5.0
+  qr_flutter: ^4.0.0
+  barcode_scan2: ^4.1.4
+  permission_handler: ^8.1.4+1
+  gallery_saver: ^2.1.2
+  image_gallery_saver: ^1.6.9
 
 
   # The following adds the Cupertino Icons font to your application.
