interpreter + stt encapsulation is done. waiting for matches completion

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,5 +6,6 @@
         "gapless",
         "shamsi",
         "sqflite"
-    ]
+    ],
+    "terminal.integrated.defaultProfile.windows": "Git Bash"
 }
