--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   permission_handler: ^8.1.4+1
   gallery_saver: ^2.1.2
   image_gallery_saver: ^1.6.9
+  speech_to_text: ^5.0.0
 
 
   # The following adds the Cupertino Icons font to your application.
